// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly 1`] = `
.c0 {
  color: #FFF;
  background-color: #0CD664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="c0"
>
  Active
</span>
`;

exports[`Badge renders correctly with background color 1`] = `
.c0 {
  color: #FFF;
  background-color: red;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="c0"
>
  Red background badge
</span>
`;

exports[`Badge renders correctly with color 1`] = `
.c0 {
  color: red;
  background-color: #0CD664;
  padding: 0.125rem 0.4375rem;
  text-align: center;
  text-transform: uppercase;
  border-radius: 100px;
  font-size: 0.5rem;
  line-height: 0.625rem;
  -webkit-letter-spacing: 0.03125rem;
  -moz-letter-spacing: 0.03125rem;
  -ms-letter-spacing: 0.03125rem;
  letter-spacing: 0.03125rem;
  font-weight: 700;
}

<span
  className="c0"
  color="red"
>
  Red badge
</span>
`;
